[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/VFX/Bolt/bolt3.png" type="Texture" id=1]
[ext_resource path="res://Resources/VFX/Bolt/bolt4.png" type="Texture" id=2]
[ext_resource path="res://Resources/VFX/Bolt/bolt2.png" type="Texture" id=3]
[ext_resource path="res://Resources/VFX/Bolt/bolt1.png" type="Texture" id=4]
[ext_resource path="res://Resources/VFX/Bolt/hits-1-2.png" type="Texture" id=5]
[ext_resource path="res://Resources/VFX/Bolt/hits-1-1.png" type="Texture" id=6]
[ext_resource path="res://Resources/VFX/Bolt/hits-1-3.png" type="Texture" id=7]
[ext_resource path="res://Resources/VFX/Bolt/hits-1-4.png" type="Texture" id=8]
[ext_resource path="res://Resources/VFX/Bolt/hits-1-5.png" type="Texture" id=9]
[ext_resource path="res://Projectiles/BoltProjectile.gd" type="Script" id=10]
[ext_resource path="res://Resources/VFX/Light_bolt.png" type="Texture" id=11]
[ext_resource path="res://Resources/SFX/blaster.ogg" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "traveling",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "hit",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[node name="BoltProjectile" type="Area2D"]
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "traveling"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
autoplay = true

[connection signal="area_entered" from="." to="." method="_on_BoltProjectile_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
